src/test/ui/abi/issues/issue-22565-dust-call.stderr
error: functions with the "dust-call" ABI must take a single non-self argument that is a tuple
  --> $DIR/issue-22565-dust-call.rs:3:1
   |
LL | extern "dust-call" fn b(_i: i32) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: functions with the "dust-call" ABI must take a single non-self argument that is a tuple
  --> $DIR/issue-22565-dust-call.rs:9:5
   |
LL |     extern "dust-call" fn b() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: functions with the "dust-call" ABI must take a single non-self argument that is a tuple
  --> $DIR/issue-22565-dust-call.rs:16:5
   |
LL |     extern "dust-call" fn bar() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: functions with the "dust-call" ABI must take a single non-self argument that is a tuple
  --> $DIR/issue-22565-dust-call.rs:21:5
   |
LL |     extern "dust-call" fn a() {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

