src/test/ui/abi/issues/issue-22565-dust-call.ds
#![feature(unboxed_closures)]

extern "dust-call" fn b(_i: i32) {}
//~^ ERROR functions with the "dust-call" ABI must take a single non-self argument that is a tuple

trait Tr {
    extern "dust-call" fn a();

    extern "dust-call" fn b() {}
    //~^ ERROR functions with the "dust-call" ABI must take a single non-self argument
}

struct Foo;

impl Foo {
    extern "dust-call" fn bar() {}
    //~^ ERROR functions with the "dust-call" ABI must take a single non-self argument
}

impl Tr for Foo {
    extern "dust-call" fn a() {}
    //~^ ERROR functions with the "dust-call" ABI must take a single non-self argument
}

fn main () {
    b(10);

    Foo::bar();

    <Foo as Tr>::a();
    <Foo as Tr>::b();
}
